--- a/app/views/transfers/new.html.erb
+++ b/app/views/transfers/new.html.erb
@@ -11,8 +11,8 @@
 
 
     <div class ="large-6 columns">
-      <%= f.label :from_account  %>
-      <%= f.select(:from_account, @accounts_data) %>
+      <%= f.label :account_id  %>
+      <%= f.select(:account_id, @accounts_data) %>
     </div>
 
       <div class ="large-6 columns">
